# tally

./: .gitignore  README.md
.cursor/rules/: react-patterns.mdc  tally-project-structure.mdc
notes/: PROJECT_STRUCTURE.md  Tally_ Tabular Review.md  UI-design-proposal.md  fastapi-best-practices.md  highlevel-application-requirements.md  tanstack_table.md
tally-backend/: README.md  Simple_API_Server.postman_collection.json  pyproject.toml  pytest.ini  run_tests.sh  settings.toml  simple_api_server.py  test_requirements.txt
tally-backend/app/: config.py  main.py  routes.py  schemas.py
tally-backend/app/middleware/: tracing.py
tally-backend/app/modules/: __init__.py
tally-backend/app/modules/ai_responses/: __init__.py  routes.py
tally-backend/app/modules/controls/: __init__.py  routes.py  service.py
tally-backend/app/modules/documents/: __init__.py  routes.py
tally-backend/app/modules/tabular/: __init__.py  routes.py  service.py
tally-backend/app/services/: ai_service.py  document_service.py  storage_service.py  validation_service.py
tally-backend/scratch-notes/: TEST_SUITE_SUMMARY.md  Tally_API_Collection.postman_collection.json  Tally_Async_Supabase_Tests.postman_collection.json  Tally_Environment.postman_environment.json  Tally_Reducto_Test.postman_collection.json  Tally_Test_APIs.postman_collection.json
tally-backend/tests/: conftest.py  test_ai_responses.py  test_controls.py  test_documents_storage.py  test_health_system.py  test_integration.py  test_tabular.py
